# dragonfly_civil

./: .dockerignore  .env  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  DEMO_DRAGONFLY_CONSOLE.md  DIAGNOSTIC_REPORT.md  Dockerfile  Dragonfly_Codex_Guide.md  Makefile  Procfile  README.md  RELEASE_NOTES_v1.0.md  RUNBOOK_900_IMPORT.md  RUNBOOK_DAD.md  RUNBOOK_GO_LIVE.md  RUNBOOK_MOM.md  RUNBOOK_POOLER.md  check_lazy_import.py  collect.txt  docker-compose.test.yml  docker-compose.yml  fake.txt  intake_900.csv  mypy.ini  nixpacks.toml  plaintiffs_canonical.csv  pyproject.toml  pytest.ini  railway.toml  requirements.txt  tmp_diff.txt  tools_run_uvicorn.py  validate_simplicity.py  validation_20251027.txt  validation_20251028.txt  (+5 more)
.github/: copilot-instructions.md
apps/: dragonfly_dashboard.py
backend/: Procfile  __init__.py  asyncio_compat.py  config.py  db.py  dsn_sanitizer.py  main.py  preflight.py  requirements.txt  scheduler.py  startup_validator.py  worker.py
brain/: __init__.py  escalation_engine.py
config/: schema_map.yaml
data/: jbi_export.csv  jbi_export_valid_sample.csv  jbi_import_mapping_template.csv  judgments_batch.csv  simplicity_export.csv  simplicity_status_export.csv  status_mapping.csv
data_error/: failed_rows_2d03ab44-ed28-4a3d-8b36-219034048b70.csv  failed_rows_5efadafa-4ef3-4973-b0b8-d0dea89abf3a.csv  failed_rows_d86b765c-13b3-40a6-93e1-12b99a959df9.csv  watcher_test.csv.err.json
data_in/: batch_seed_test.csv  dummy_intake.csv  prod_intake_fresh_15.csv  simplicity_plaintiffs_sample.csv  simplicity_smoke_test.csv  simplicity_test_10.csv  simplicity_test_badrow.csv  simplicity_test_single.csv
data_processed/: simplicity_smoke.csv
deploy/: Dockerfile.worker
docs/: ARCHITECTURE.md  CEO_GUIDE.md  CEO_PLAYBOOK.md  CODING_WORKFLOW.md  COLLECTABILITY_SCORING_SPEC.md  Claude_Engineer_Guide.md  DATABASE_DATA_CLASSIFICATION.md  DATABASE_SECURITY_CONTRACT.md  DATA_CONTRACT.md  DEPLOYMENT_SUMMARY.md  DRAGONFLY_BACKEND_TESTING.md  DRAGONFLY_CONSTITUTION.md  DRAGONFLY_SOP_BUNDLE.md  Dragonfly_Codex_Guide.md  GOLDEN_RELEASE_PROCEDURE.md  GO_LIVE_CERTIFICATE.md  INCIDENT_LOG.md  MIGRATION_POLICY.md  MIGRATION_QUICK_REF.md  OPS_MANUAL.md  Ops_Runbook.md  PERFECT_PLAINTIFFS_SOURCE_ROADMAP.md  POLICY_MIGRATE_DB_URL.md  RAG_SAFETY_CONTRACT.md  RAILWAY_WORKER_CONFIG.md  README.md  ROUTE_CONTRACT_HARDENING.md  RUNBOOK_DISASTER_RECOVERY.md  RUNBOOK_DSN.md  RUNBOOK_DSN_CONTRACT.md  RUNBOOK_GO_LIVE.md  RUNBOOK_HISTORY_SCRUB.md  RUNBOOK_INCIDENT.md  RUNBOOK_PERFECT_PLAINTIFFS.md  RUNBOOK_PLAINTIFFS_GO_LIVE.md  RUNBOOK_PLAINTIFF_INGESTION.md  RUNBOOK_PLAINTIFF_INGEST_CLI.md  RUNBOOK_PLAINTIFF_INGEST_MOAT.md  RUNBOOK_POSTGREST_HEALTH.md  RUNBOOK_PREFLIGHT.md  (+33 more)
dragonfly-dashboard/: .env.backup  .env.example  index.html  package-lock.json  package.json  postcss.config.cjs  postcss.config.js  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
etl/: __init__.py  collector_intel.py  jbi_import.py  loaders.py  sync_simplicity.py  transforms.py
judgment_ingestor/: main.py
ops/: alert_queries.sql  ceo_dashboard.sql  contract_versioning.sql  diagnose_cron.sql  ops_audit_universal.sql  prod_verification.sql  reaper_hardening.sql  reaper_health.sql  reset_db_password.sql  tasks.json  zero_regret_access.sql
orchestration/: golden_path_schema.sql
planner/: enforcement_planner.py
run/: plaintiffs_canonical.csv
scripts/: Write-Status.ps1  __init__.py  _tmp_check_cases.py  apply_enrichment_finalize.py  apply_title_trigger.py  audit_env.ps1  audit_privileges.py  auto_dad_demo.ps1  bootstrap.ps1  certify_readiness.ps1  check_all.ps1  check_collectability_snapshot.py  check_enrichment_tables.py  check_enrichment_type.py  check_env_schema.py  check_prod_schema.py  check_worker_heartbeat.py  cleanup_types.py  dad_demo.ps1  dad_go.ps1  dad_ready.ps1  daily_dev_check.ps1  daily_prod_check.ps1  db_check.sql  db_get_migrations.ps1  db_migrate.ps1  db_push.ps1  db_repair.ps1  demo_pipeline_prod.ps1  demo_reset_and_smoke.ps1  demo_smoke_prod.ps1  deploy_db_prod.ps1  deploy_hook_post_schema.ps1  deploy_prod.ps1  deploy_release_candidate.ps1  deploy_stabilization.ps1  deploy_workers.ps1  dev_frontend.ps1  fix_git_tracking.ps1  fix_gitignore.ps1  (+79 more)
src/: core_config.py  db_upload_safe.py  dsn_compat.py  logging_setup.py  settings.py  supabase_client.py
state/: manifest.jsonl  schema_freeze.json  session.json
supabase/: config.toml  migration_manifest.yaml  schema.sql
tests/: __init__.py  conftest.py  helpers.py  test_ai_service.py  test_alerts_export.py  test_analytics_intake_radar.py  test_api_auth.py  test_api_envelope.py  test_api_intake_batches.py  test_application_name.py  test_audit_logging.py  test_auth_lockout_circuit_breaker.py  test_auth_session.py  test_backend_main_correlation_optional.py  test_backend_main_env_file.py  test_backend_main_metrics_router.py  test_bootstrap_resilience.py  test_call_queue_sync.py  test_case_copilot.py  test_case_insert.py  test_ceo_command_center.py  test_check_prod_schema.py  test_collectability_engine.py  test_collectability_snapshot.py  test_config_check.py  test_config_guard.py  test_config_guard_db_validator.py  test_core_config.py  test_correlation_middleware.py  test_db_retry_classifier.py  test_db_upload_safe.py  test_degraded_mode.py  test_doctor_all.py  test_dsn_guard.py  test_dsn_sanitizer.py  test_dsn_tools.py  test_end_to_end_logic.py  test_enforcement_planner.py  test_enforcement_radar_filters.py  test_enforcement_unify.py  (+103 more)
tmp/: add_job_type.py  apply_enforcement_schema.py  apply_fix.py  apply_ingest_migration.py  apply_log_call_outcome_sql.py  apply_reaper_migration.py  apply_trigger.py  audit_zero_regret.py  check_columns.py  check_constraint.py  check_heartbeat_details.py  check_heartbeats.py  check_ingest.py  check_intake.py  check_job_types.py  check_judgments.py  check_log_call_signature.py  check_migrations.py  check_reaper.py  check_rls.py  check_roles.py  check_schema.py  check_table_exists.py  check_tenant.py  cleanup_test.py  (+43 more)
(+1149 files in other folders)
