# =============================================================================
# Dragonfly Civil - Project Configuration
# =============================================================================
# This file consolidates tool configurations for Railway/CI builds.
# Type hints are advisory-only; builds should not fail on type errors.
# =============================================================================

[project]
name = "dragonfly-civil"
version = "1.2.0"
description = "Judgment enforcement operating system"
requires-python = ">=3.11"

# =============================================================================
# MyPy Configuration - Relaxed for Production Builds
# =============================================================================
# Type hints are documentation, not enforcement. Allow builds to pass.

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
strict_optional = false
no_implicit_optional = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
warn_return_any = false
warn_unused_configs = false
# Exclude all major code directories from strict checking
exclude = [
    "^\\.venv/",
    "^\\.mypy_cache/",
    "^\\.pytest_cache/",
    "^tmp/",
    "^backend/",
    "^etl/",
    "^workers/",
    "^src/",
    "^tests/",
    "^tools/",
    "^scripts/",
]

# =============================================================================
# Ruff Configuration - Fast Linting
# =============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    "tmp",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "F401",  # Unused import (often intentional for re-exports)
    "E402",  # Module level import not at top (scripts manipulate sys.path)
]

# Per-file ignores for SQL-heavy files (trailing whitespace in multiline SQL strings)
[tool.ruff.lint.per-file-ignores]
# Migration files: SQL readability requires indentation that triggers W291/W293
"supabase/migrations/*.sql" = ["W291", "W293"]
# Backend files with embedded SQL strings
"backend/api/routes/ops.py" = ["W291", "W293"]
"backend/routers/enforcement_hybrid_example.py" = ["W291", "W293"]
"backend/routers/telemetry.py" = ["W291", "W293"]
"backend/routers/health.py" = ["W291", "W293"]
"backend/services/dashboard_fallback.py" = ["W291", "W293"]
"backend/services/ingestion_service.py" = ["W291", "W293", "F841"]
"backend/utils/audit.py" = ["W291", "W293"]
"backend/workers/outbox_processor.py" = ["F841"]
"backend/workers/watchdog.py" = ["W291", "W293"]
"etl/loaders.py" = ["W291", "W293"]
# Scripts with embedded SQL
"scripts/apply_title_trigger.py" = ["W291", "W293"]
"scripts/tmp_refresh_enforcement_views.py" = ["W291", "W293"]
# Blanket exclusions for tools and tests (common SQL patterns, unused vars in smoke tests)
"tools/*.py" = ["W291", "W293", "F841"]
"tests/*.py" = ["W291", "W293", "F841"]

# =============================================================================
# Black Configuration - Code Formatting
# =============================================================================

[tool.black]
target-version = ["py311"]
line-length = 100
exclude = '''
/(
    \.venv
  | \.mypy_cache
  | \.pytest_cache
  | tmp
  | __pycache__
)/
'''

# =============================================================================
# isort Configuration - Import Sorting
# =============================================================================

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", ".mypy_cache", ".pytest_cache", "tmp"]

# =============================================================================
# Pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "e2e: marks tests as end-to-end tests",
    "slow: marks tests as slow-running",
]
